--- a/website/lectures/lecture1.qmd
+++ b/website/lectures/lecture1.qmd
@@ -35,6 +35,11 @@ We will use
 For this lecture, we will use a new R package to scrape NBA boxscore data.
 In order to do this, it is critical that you have already installed the **devtools** package, as noted in the [Getting Started guide](guides/getting_started.html).
 To check that you have successfully installed the package, run the following code.
+```{r}
+if(!"devtools" %in% rownames(installed.packages())){
+  stop("devtools not installed")
+}
+```
 :::
 
 
