Start writing statsbom plot function

--- a/website/exercises/exercises1_boxscore.qmd
+++ b/website/exercises/exercises1_boxscore.qmd
@@ -7,7 +7,8 @@ title: "Constructing Advanced Metrics Using Box Score Data"
 We will rely on data from the Lahman Database.
 
 ## Setup: Installing the Lahman package
-```{r install-lehman}
+```{r install-lahman}
+#| eval: false
 if(!"Lahman" %in% rownames(installed.packages())){
   message("Package `Lahman' not already installed. Installing now")
   install.packages("Lahman")
