--- a/website/guides/getting_started.qmd
+++ b/website/guides/getting_started.qmd
@@ -1,11 +1,16 @@
 ---
-title: "Getting Started with R & RStudio"
+title: "Getting Started"
 ---
 
 
 This course will make **extensive** use of the [R programming language]() through the [RStudio](https://posit.co/download/rstudio-desktop/) integrated development environment (IDE). 
 Because the formal pre-requisites for this course are STAT 333 or 340, you are expected to have previous experience using the R programming language.
 
+The course will also use version control (using git and GitHub) and Quarto for publishing the results of your analyses.
+This page contains information
+
+
+## Computing (R & RStudio)
 :::{#prereq-warning .callout-important}
 
 ## Warning
@@ -30,44 +35,74 @@ Here are some helpful resources
   * [R for Data Science](https://r4ds.hadley.nz)
   * [Data Science: A first introduction](https://datasciencebook.ca)
 
-## Installation
+### Installation
 
 While you are expected to have used R in previous courses (see warning), I **strongly** recommend installing the latest version of both R and RStudio at the beginning of the course.
 As of the time of this writing, that is R version 4.5 and RStudio version 2025.05.
 
 You can download a version of R specific to for your operating system from [this website](https://cloud.r-project.org).
+After install R, you should download and re-install RStudio from [this website](https://posit.co/download/rstudio-desktop/).
 
-
-### Package re-installation
-
+:::{#reinstallation-tip .callout-tip}
 Whenever you update your version of R, you need to re-install the packages; this is a perennial source of [frustration](https://bsky.app/profile/benbushong.com/post/3lbqnkbazgh2e) for many R users] and [some good-natured humor](https://bsky.app/profile/hadley.nz/post/3lnlrbqv7qs2i) from others (who [also](https://bsky.app/profile/hadley.nz/post/3lnmafh3ljs2y) manually re-installs packages after every update!)
+:::
 
-
-
-## Required Packages
+### Required Packages
 
 Throughout the course, we will make extensive use of several packages in the **tidyverse**, primarily for data loading, pre-processing, and manipulation.
 We will also make extensive use of the packages **glmnet**, **ranger**, and **xgboost** for model fitting.
-We will occassionally also use **ggplot2** for creating visualizations.
+We will occasionally also use **ggplot2** for creating visualizations.
 
 As the course progresses, we will introduce and install new package as required.
-For the most part, these packages will be specific to a particular sport (e.g., in Lecture 1 we will use the [**nbastatR**](http://asbcllc.com/nbastatR/index.html) to access NBA player box-score statistics).
-
+For the most part, these packages will be specific to a particular sport.
 Every package that we will use in this class is available through either (i) the  Comprehensive R Archive Network (CRAN) or (ii) a public GitHub repository maintained by the packager developer.
 We typically install CRAN packages using the `install.packages()` command.
 To install packages hosted on GitHub, we will use the `install_github` function in the [*devtools*](https://cran.r-project.org/web/packages/devtools/index.html) package (which itself is available on CRAN)
 
 :::{.callout-tip}
-## Required installations
+## Base packages
 
 Prior to Lecture 2, please make sure you have installed the **tidyverse** packages as well as **devtools**, **ggplot2**, **glmnet**, **ranger**, and **xgboost**.
 ```{r install_packages}
 #| eval: false
-install.packages(c("devtools", "tidyverse", "ggplot2", 
-                   "glmnet", "ranger", "xgboost"))
+install.packages(c("devtools", "tidyverse", "ggplot2", "glmnet", "ranger", "xgboost"))
 ```
 :::
 
+## Version control (Git & GitHub)
 
+<!--
+  1. What is version control, what is git, github, why you should use it
+     minor point: at the end of the course, you can show off your portfolio really easily; just share a GitHub link and someone can through your code and see how you. 
+  2. Resources: link to several sites. For the purposes of this class, you primarily will be pushing, pulling, branching, and merging. It takes some time getting used to. But it's a very good return on investment
+  3. Suggested workflow:
+      a) create an account (if you don't already have one)
+      b) Create a repository on GitHub to store your work for the class. Clone it on your laptop. At a minimum set up a directory for exercises and for reproducing the code in lecture. 
+      c) For each project, your team can create a shared repository (one person owns it and then invites other people as collaborators).
+-->
+
+### Additional Resources
+
+
+## Quarto
+
+### Installation
+
+
+### Publishing 
+<!--
+  If you are familiar with RMarkdown, think of Quarto as its evolved form. It supports more language (viz., python and Julia)
+  You need to install quarto here; as we're using it with RStudio it's vital you get the latest version of R and RStudio!
+  This course website and (most) of the slides were created with Quarto.
+  And it is expected
+  
+  Particularly useful is the ability to create GitHub Flavored Markdown. This will let you post writeups (like this!) directly on your GitHub. This is a great, lightweight way to share your projects/portfolios.
+  And indeed, this is how I expect you to submit your project writeups!
+-->
+
+
+<!--
+  If you made it this far, click this link and respond to the survey here
+-->
 
 
